# AgentGuard

./: .gitignore  CONTRIBUTING.md  LAUNCH.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
examples/unsafe/: AGENTS.md
src/agentguard/: __init__.py  cli.py  groq.py  rules.py  scanner.py
tests/: test_groq.py  test_scanner.py
