[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "0.1.0"
description = "Scan repositories for risky AI-agent instructions and config patterns."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AgentGuard contributors" }]
keywords = ["ai", "agents", "security", "cli", "mcp", "codex", "claude", "cursor"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
agentguard = "agentguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
